# TestNet

./: CMakeLists.txt  README.md
includes/: Button.h  Matrix.h  NeuralNet.h
src/: Button.cpp  Main2.cpp  Matrix (merp).cpp.no  Matrix.cpp  NeuralNet (merp).cpp.no  NeuralNet.cpp
